--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "browserslist": [],
   "prettier": {
     "singleQuote": true,
+    "jsxSingleQuote": true,
     "overrides": [
       {
         "files": [
@@ -109,6 +110,10 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
